--- a/index.html
+++ b/index.html
@@ -4,17 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/5f1c8b453d.js" crossorigin="anonymous"></script>
     <title>Accueil - ohmyfood </title>
 </head>
 <body>
     <header>
+        <div>
+            <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        </div>
 
     </header>
     <main>
 
     </main>
     <footer>
-        
+        <h3>ohmyfood</h3>
+        <a href="#">Proposer un restaurant</a>
+        <a href="#">Devenir partenaire</a>
+        <a href="#">Mentions légales</a>
+        <a href="mailto:contact@ohmyfood.fr">contact</a>
     </footer>
 </body>
 </html>
