--- a/index.html
+++ b/index.html
@@ -7,22 +7,102 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5f1c8b453d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="public/css/style.css">
     <title>Accueil - ohmyfood </title>
 </head>
 <body>
     <header>
         <div>
-            <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+            <img src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         </div>
-
     </header>
     <main>
-
+        <section>
+            <i class="fa-map-marker-alt fas local__icon" aria-hidden="true"></i>
+            <span>Paris, Belleville</span>
+        </section>
+        <section>
+            <h2>Réservez le menu qui vous convient</h2>
+            <p>Découvrez des restaurants d'exception séléctionnés par nos soin</p>
+            <a href="#">Explorer nos restaurants</a>
+        </section>
+        <section>
+            <div>
+                <h2>Fonctionnement</h2>
+                <ol>
+                    <li>
+                        <i class="fa-mobile-alt fas" aria-hidden="true"></i>
+                        <span>Choississez un restaurant</span>
+                    </li>
+                    <li>
+                        <i class="fa-list-ul fas" aria-hidden="true"></i>
+                        <span>Composez votre menu</span>
+                    </li>
+                    <li>
+                        <i class="fa-store fas" aria-hidden="true"></i>
+                        <span>Dégustez au restaurant</span>
+                    </li>
+                </ol>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h2>Restaurants</h2>
+                <div>
+                    <a href="menu1.html">
+                        <figure>
+                            <img src="sass/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                            <span>Nouveau</span>
+                            <figcaption>
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </figcaption>
+                            <i class="fa-heart far"></i>
+                            <i class="fa-heart fas"></i>
+                        </figure>
+                    </a>
+                    <a href="menu2.html">
+                        <figure>
+                            <img src="sass/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                            <span>Nouveau</span>
+                            <figcaption>
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
+                            </figcaption>
+                            <i class="fa-heart far"></i>
+                            <i class="fa-heart fas"></i>
+                        </figure>
+                    </a>
+                    <a href="menu3.html">
+                        <figure>
+                            <img src="sass/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                            <figcaption>
+                                <h3>A la francaise</h3>
+                                <p>Cité rouge</p>
+                            </figcaption>
+                            <i class="fa-heart far"></i>
+                            <i class="fa-heart fas"></i>
+                        </figure>
+                    </a>
+                    <a href="menu4.html">
+                        <figure>
+                            <img src="sass/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                            <figcaption>
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                            </figcaption>
+                            <i class="fa-heart far"></i>
+                            <i class="fa-heart fas"></i>
+                        </figure>
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <h3>ohmyfood</h3>
-        <a href="#">Proposer un restaurant</a>
-        <a href="#">Devenir partenaire</a>
+        <a href="#"><i class="fa-utensils fas footer__icon" aria-hidden="true"></i> un restaurant</a>
+        <a href="#"><i class="fa-hands-helping fas footer__icon" aria-hidden="true"></i>Devenir partenaire</a>
         <a href="#">Mentions légales</a>
         <a href="mailto:contact@ohmyfood.fr">contact</a>
     </footer>
