--- a/menu4.html
+++ b/menu4.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5f1c8b453d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="public/css/style.css">
     <title>Restaurant "Le délice des sens" - ohmyfood</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
                 <a href="index.html"><i class="fas fa-arrow-left"></i></a>
             </div>
             <div>
-                <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                <img src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
             </div>
         </div>
     </header>
@@ -25,8 +26,8 @@
     </main>
     <footer>
         <h3>ohmyfood</h3>
-        <a href="#">Proposer un restaurant</a>
-        <a href="#">Devenir partenaire</a>
+        <a href="#"><i class="fa-utensils fas footer__icon" aria-hidden="true"></i> un restaurant</a>
+        <a href="#"><i class="fa-hands-helping fas footer__icon" aria-hidden="true"></i>Devenir partenaire</a>
         <a href="#">Mentions légales</a>
         <a href="mailto:contact@ohmyfood.fr">contact</a>
     </footer>
