--- a/menu1.html
+++ b/menu1.html
@@ -30,14 +30,110 @@
                 <i class="fa-heart fas"></i>
             </div>
             <div>
-
+                <div>
+                    <h3>ENTREES</h3>
+                    <div>
+                        <div>
+                            <h4>Fricassée d'escargot</h4>
+                            <p>Au piment d'espelette</p>
+                        </div>
+                        <div>25 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Foie gras de canard mi-cuit</h4>
+                            <p>Et ses copeaux de truffe noire</p>
+                        </div>
+                        <div>35 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Oeuf au plat</h4>
+                            <p>Assaisonné à la truffe sur lit de poireaux</p>
+                        </div>
+                        <div>20 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>    
+                </div>
+                <div>
+                    <h3>PLATS</h3>
+                    <div>
+                        <div>
+                            <h4>Filet de boeuf aux herbes</h4>
+                            <p>Accompagné de sa ribambelle de légumes</p>
+                        </div>
+                        <div>40 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Parmentier de queue de boeuf</h4>
+                            <p>A la truffe noire sur sa purée de panais</p>
+                        </div>
+                        <div>35 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Filet de turbot</h4>
+                            <p>Aux agrumes</p>
+                        </div>
+                        <div>44 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>      
+                </div>
+                <div>
+                    <h3>DESSERTS</h3>
+                    <div>
+                        <div>
+                            <h4>Paris-Brest</h4>
+                            <p>Revisité</p>
+                        </div>
+                        <div>18 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Macaron au chocolat d'exception</h4>
+                            <p>Et glace à la vanille de Madagascar</p>
+                        </div>
+                        <div>22 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Mousse au chocolat</h4>
+                            <p>Au piment d'espelette et à la truffe noire</p>
+                        </div>
+                        <div>23 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>  
+                </div>
             </div>
             <div>
-
+                <button>Commander</button>
             </div>
         </section>
-
-
     </main>
     <footer>
         <h3>ohmyfood</h3>
