--- a/menu2.html
+++ b/menu2.html
@@ -21,8 +21,129 @@
             </div>
         </div>
     </header>
+    <img src="sass/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
     <main>
-
+        <section>
+            <div>
+                <h2>La note enchantée</h2>
+                <i class="fa-heart far"></i>
+                <i class="fa-heart fas"></i>
+            </div>
+            <div>
+                <div>
+                    <h3>ENTREES</h3>
+                    <div>
+                        <div>
+                            <h4>Raviole de foie gras</h4>
+                            <p>Accompagnés de leur crème à la truffe</p>
+                        </div>
+                        <div>25 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Caviar osciètre</h4>
+                            <p>Sur blini à la farine de blé noir</p>
+                        </div>
+                        <div>35 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Homard et espuma</h4>
+                            <p>Marinés aux zests d'orange</p>
+                        </div>
+                        <div>20 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Foie gras de canard cuit entier</h4>
+                            <p>Confiture de figue et pain toasté</p>
+                        </div>
+                        <div>35 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>    
+                </div>
+                <div>
+                    <h3>PLATS</h3>
+                    <div>
+                        <div>
+                            <h4>Noix de coquilles Saint-Jacques</h4>
+                            <p>Sur lit de purée de céleri-rave</p>
+                        </div>
+                        <div>40 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Langoustine poêlée</h4>
+                            <p>Purée de patate douce</p>
+                        </div>
+                        <div>35 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Mijoté de queue de boeuf</h4>
+                            <p>Et riz sauvage aux zestes de citron</p>
+                        </div>
+                        <div>44 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>      
+                </div>
+                <div>
+                    <h3>DESSERTS</h3>
+                    <div>
+                        <div>
+                            <h4>Macaron noisette et chocolat</h4>
+                            <p>Glace au caramel brun et sel de Guérande</p>
+                        </div>
+                        <div>18 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Baba au rhum revesité</h4>
+                            <p>Avec son coulis de citron</p>
+                        </div>
+                        <div>22 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Tarte au citron meringuée</h4>
+                            <p>destructurée</p>
+                        </div>
+                        <div>23 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>  
+                </div>
+            </div>
+            <div>
+                <button>Commander</button>
+            </div>
+        </section>
     </main>
     <footer>
         <h3>ohmyfood</h3>
