--- a/menu3.html
+++ b/menu3.html
@@ -21,8 +21,119 @@
             </div>
         </div>
     </header>
+    <img src="sass/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
     <main>
-
+        <section>
+            <div>
+                <h2>A la française</h2>
+                <i class="fa-heart far"></i>
+                <i class="fa-heart fas"></i>
+            </div>
+            <div>
+                <div>
+                    <h3>ENTREES</h3>
+                    <div>
+                        <div>
+                            <h4>Tartare de poulpe acidulé</h4>
+                            <p>Aux zests d'orange</p>
+                        </div>
+                        <div>25 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Velouté de légumes d'antan</h4>
+                            <p>Carotte, panais, topinambour</p>
+                        </div>
+                        <div>35 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Soupe à l'oignon</h4>
+                            <p>Revisité</p>
+                        </div>
+                        <div>20 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>   
+                </div>
+                <div>
+                    <h3>PLATS</h3>
+                    <div>
+                        <div>
+                            <h4>Coquilles Saint-Jacques</h4>
+                            <p>Accompagné d'une purée de panais</p>
+                        </div>
+                        <div>40 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Magret de canard</h4>
+                            <p>Et parmentier de pommes de terres</p>
+                        </div>
+                        <div>35 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Pigeonneau d'Ille-et Vilaine</h4>
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div>44 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>      
+                </div>
+                <div>
+                    <h3>DESSERTS</h3>
+                    <div>
+                        <div>
+                            <h4>Pétales de viollettes glacés</h4>
+                            <p>Et purée de noisettes</p>
+                        </div>
+                        <div>18 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Fondant au chocolat</h4>
+                            <p>Revisité</p>
+                        </div>
+                        <div>22 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Millefeuille croustillant</h4>
+                            <p>Myrtilles et pâtes d'amande</p>
+                        </div>
+                        <div>23 €</div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>  
+                </div>
+            </div>
+            <div>
+                <button>Commander</button>
+            </div>
+        </section>
     </main>
     <footer>
         <h3>ohmyfood</h3>
