--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Accueil - ohmyfood </title>
 </head>
 <body>
-    <header>
-        <div>
+    <header class="logo">
+        <div class="logo-haut">
             <img src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         </div>
     </header>
@@ -99,12 +99,14 @@
             </div>
         </section>
     </main>
-    <footer>
-        <h3>ohmyfood</h3>
-        <a href="#"><i class="fa-utensils fas footer__icon" aria-hidden="true"></i> un restaurant</a>
-        <a href="#"><i class="fa-hands-helping fas footer__icon" aria-hidden="true"></i>Devenir partenaire</a>
-        <a href="#">Mentions légales</a>
-        <a href="mailto:contact@ohmyfood.fr">contact</a>
+    <footer class="footer">
+        <div class="footer_container">
+            <h3 class="footer_titre">ohmyfood</h3>
+            <a class="footer_text" href="#"><i class="fa-utensils fas footer_icone" aria-hidden="true"></i>Proposer un restaurant</a>
+            <a class="footer_text"href="#"><i class="fa-hands-helping fas footer_icone" aria-hidden="true"></i>Devenir partenaire</a>
+            <a class="footer_text" href="#">Mentions légales</a>
+            <a class="footer_text" href="mailto:contact@ohmyfood.fr">Contact</a>
+        </div>
     </footer>
 </body>
 </html>
