--- a/menu1.html
+++ b/menu1.html
@@ -11,15 +11,15 @@
     <title>Restaurant "la palette de goût" - ohmyfood</title>
 </head>
 <body>
-    <header>
+    <header class="logo">
         <div>
-            <div>
-                <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-            </div>
-            <div>
-                <img src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
-            </div>
-        </div>
+            <a href="index.html">
+                <i class="fas fa-arrow-left logo-retour"></i>
+            </a>
+        </div>       
+        <div>      
+            <img class="logo-haut" src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        </div>        
     </header>
     <img src="sass/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
     <main>
@@ -135,12 +135,14 @@
             </div>
         </section>
     </main>
-    <footer>
-        <h3>ohmyfood</h3>
-        <a href="#"><i class="fa-utensils fas footer__icon" aria-hidden="true"></i> un restaurant</a>
-        <a href="#"><i class="fa-hands-helping fas footer__icon" aria-hidden="true"></i>Devenir partenaire</a>
-        <a href="#">Mentions légales</a>
-        <a href="mailto:contact@ohmyfood.fr">contact</a> 
+    <footer class="footer">
+        <div class="footer_container">
+            <h3 class="footer_titre">ohmyfood</h3>
+            <a class="footer_text" href="#"><i class="fa-utensils fas footer_icone" aria-hidden="true"></i>Proposer un restaurant</a>
+            <a class="footer_text"href="#"><i class="fa-hands-helping fas footer_icone" aria-hidden="true"></i>Devenir partenaire</a>
+            <a class="footer_text" href="#">Mentions légales</a>
+            <a class="footer_text" href="mailto:contact@ohmyfood.fr">Contact</a>
+        </div>
     </footer>
 </body>
 </html>
