--- a/menu3.html
+++ b/menu3.html
@@ -11,15 +11,9 @@
     <title>Restaurant "A la francaise" - ohmyfood</title>
 </head>
 <body>
-    <header>
-        <div>
-            <div>
-                <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-            </div>
-            <div>
-                <img src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
-            </div>
-        </div>
+    <header class="logo">
+        <a href="index.html"><i class="fas fa-arrow-left logo-retour"></i></a>   
+        <img class="logo-haut" src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
     <img src="sass/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
     <main>
@@ -135,12 +129,14 @@
             </div>
         </section>
     </main>
-    <footer>
-        <h3>ohmyfood</h3>
-        <a href="#"><i class="fa-utensils fas footer__icon" aria-hidden="true"></i> un restaurant</a>
-        <a href="#"><i class="fa-hands-helping fas footer__icon" aria-hidden="true"></i>Devenir partenaire</a>
-        <a href="#">Mentions légales</a>
-        <a href="mailto:contact@ohmyfood.fr">contact</a>
+    <footer class="footer">
+        <div class="footer_container">
+            <h3 class="footer_titre">ohmyfood</h3>
+            <a class="footer_text" href="#"><i class="fa-utensils fas footer_icone" aria-hidden="true"></i>Proposer un restaurant</a>
+            <a class="footer_text"href="#"><i class="fa-hands-helping fas footer_icone" aria-hidden="true"></i>Devenir partenaire</a>
+            <a class="footer_text" href="#">Mentions légales</a>
+            <a class="footer_text" href="mailto:contact@ohmyfood.fr">Contact</a>
+        </div>
     </footer>
 </body>
 </html>
