--- a/menu4.html
+++ b/menu4.html
@@ -11,21 +11,15 @@
     <title>Restaurant "Le délice des sens" - ohmyfood</title>
 </head>
 <body>
-    <header>
-        <div>
-            <div>
-                <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-            </div>
-            <div>
-                <img src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
-            </div>
-        </div>
+    <header class="logo">
+            <a href="index.html"><i class="fas fa-arrow-left logo-retour"></i></a>   
+            <img class="logo-haut" src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
-    <img src="sass/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+    <img src="sass/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
     <main>
         <section>
             <div>
-                <h2>La palette du goût</h2>
+                <h2>Le délice des sens</h2>
                 <i class="fa-heart far"></i>
                 <i class="fa-heart fas"></i>
             </div>
@@ -34,8 +28,8 @@
                     <h3>ENTREES</h3>
                     <div>
                         <div>
-                            <h4>Fricassée d'escargot</h4>
-                            <p>Au piment d'espelette</p>
+                            <h4>Tartares de thon</h4>
+                            <p>Assaisonné au yuzu</p>
                         </div>
                         <div>25 €</div>
                         <div>
@@ -44,8 +38,8 @@
                     </div>
                     <div>
                         <div>
-                            <h4>Foie gras de canard mi-cuit</h4>
-                            <p>Et ses copeaux de truffe noire</p>
+                            <h4>Bouchée de homard croustillant</h4>
+                            <p>Et sa farandole de petits légumes</p>
                         </div>
                         <div>35 €</div>
                         <div>
@@ -54,8 +48,8 @@
                     </div>
                     <div>
                         <div>
-                            <h4>Oeuf au plat</h4>
-                            <p>Assaisonné à la truffe sur lit de poireaux</p>
+                            <h4>Velouté de cèpes</h4>
+                            <p>Aux truffes</p>
                         </div>
                         <div>20 €</div>
                         <div>
@@ -77,8 +71,8 @@
                     </div>
                     <div>
                         <div>
-                            <h4>Parmentier de queue de boeuf</h4>
-                            <p>A la truffe noire sur sa purée de panais</p>
+                            <h4>Poulet rôti aux herbes de provence</h4>
+                            <p>Et ses légumes de saison</p>
                         </div>
                         <div>35 €</div>
                         <div>
@@ -87,8 +81,8 @@
                     </div>
                     <div>
                         <div>
-                            <h4>Filet de turbot</h4>
-                            <p>Aur agrumes</p>
+                            <h4>Côte de boeuf angus</h4>
+                            <p>Et sa purée de panais</p>
                         </div>
                         <div>44 €</div>
                         <div>
@@ -100,8 +94,8 @@
                     <h3>DESSERTS</h3>
                     <div>
                         <div>
-                            <h4>Paris-Brest</h4>
-                            <p>Revisité</p>
+                            <h4>Farandole de desserts</h4>
+                            <p>Du chef</p>
                         </div>
                         <div>18 €</div>
                         <div>
@@ -110,8 +104,8 @@
                     </div>
                     <div>
                         <div>
-                            <h4>Macaron au chocolat d'exception</h4>
-                            <p>Et glace à la vanille de Madagascar</p>
+                            <h4>Crème brulée</h4>
+                            <p>Revisitée</p>
                         </div>
                         <div>22 €</div>
                         <div>
@@ -120,8 +114,8 @@
                     </div>
                     <div>
                         <div>
-                            <h4>Mousse au chocolat</h4>
-                            <p>Au piment d'espelette et à la truffe noire</p>
+                            <h4>Tiramisu</h4>
+                            <p>A la noisette</p>
                         </div>
                         <div>23 €</div>
                         <div>
@@ -135,12 +129,14 @@
             </div>
         </section>
     </main>
-    <footer>
-        <h3>ohmyfood</h3>
-        <a href="#"><i class="fa-utensils fas footer__icon" aria-hidden="true"></i> un restaurant</a>
-        <a href="#"><i class="fa-hands-helping fas footer__icon" aria-hidden="true"></i>Devenir partenaire</a>
-        <a href="#">Mentions légales</a>
-        <a href="mailto:contact@ohmyfood.fr">contact</a>
+    <footer class="footer">
+        <div class="footer_container">
+            <h3 class="footer_titre">ohmyfood</h3>
+            <a class="footer_text" href="#"><i class="fa-utensils fas footer_icone" aria-hidden="true"></i>Proposer un restaurant</a>
+            <a class="footer_text"href="#"><i class="fa-hands-helping fas footer_icone" aria-hidden="true"></i>Devenir partenaire</a>
+            <a class="footer_text" href="#">Mentions légales</a>
+            <a class="footer_text" href="mailto:contact@ohmyfood.fr">Contact</a>
+        </div>
     </footer>
 </body>
 </html>
