fin de travail sur header et footer

--- a/menu1.html
+++ b/menu1.html
@@ -12,13 +12,11 @@
 </head>
 <body>
     <header class="logo">
-        <div>
             <a href="index.html">
                 <i class="fas fa-arrow-left logo-retour"></i>
-            </a>
-        </div>       
-        <div>      
-            <img class="logo-haut" src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+            </a>     
+        <div class="logo-haut">      
+            <img src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         </div>        
     </header>
     <img src="sass/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
@@ -137,7 +135,7 @@
     </main>
     <footer class="footer">
         <div class="footer_container">
-            <h3 class="footer_titre">ohmyfood</h3>
+            <img class="footer_titre" src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
             <a class="footer_text" href="#"><i class="fa-utensils fas footer_icone" aria-hidden="true"></i>Proposer un restaurant</a>
             <a class="footer_text"href="#"><i class="fa-hands-helping fas footer_icone" aria-hidden="true"></i>Devenir partenaire</a>
             <a class="footer_text" href="#">Mentions légales</a>
