--- a/menu3.html
+++ b/menu3.html
@@ -12,8 +12,12 @@
 </head>
 <body>
     <header class="logo">
-        <a href="index.html"><i class="fas fa-arrow-left logo-retour"></i></a>   
-        <img class="logo-haut" src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        <a href="index.html">
+            <i class="fas fa-arrow-left logo-retour"></i>
+        </a>     
+        <div class="logo-haut">      
+            <img src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        </div>  
     </header>
     <img src="sass/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
     <main>
@@ -131,7 +135,7 @@
     </main>
     <footer class="footer">
         <div class="footer_container">
-            <h3 class="footer_titre">ohmyfood</h3>
+            <img class="footer_titre" src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
             <a class="footer_text" href="#"><i class="fa-utensils fas footer_icone" aria-hidden="true"></i>Proposer un restaurant</a>
             <a class="footer_text"href="#"><i class="fa-hands-helping fas footer_icone" aria-hidden="true"></i>Devenir partenaire</a>
             <a class="footer_text" href="#">Mentions légales</a>
