--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="local">
             <i class="fa-map-marker-alt fas local__icon" aria-hidden="true"></i>
-            <span>Paris, Belleville</span>
+            <span class="local__texte">Paris, Belleville</span>
         </section>
         <section>
             <h2>Réservez le menu qui vous convient</h2>
@@ -101,7 +101,7 @@
     </main>
     <footer class="footer">
         <div class="footer_container">
-            <h3 class="footer_titre">ohmyfood</h3>
+            <img class="footer_titre" src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
             <a class="footer_text" href="#"><i class="fa-utensils fas footer_icone" aria-hidden="true"></i>Proposer un restaurant</a>
             <a class="footer_text"href="#"><i class="fa-hands-helping fas footer_icone" aria-hidden="true"></i>Devenir partenaire</a>
             <a class="footer_text" href="#">Mentions légales</a>
