--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="logo">
         <div class="logo-haut">
-            <img src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+            <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         </div>
     </header>
     <main>
@@ -22,27 +22,36 @@
             <span class="local__texte">Paris, Belleville</span>
         </section>
         <section>
-            <h2>Réservez le menu qui vous convient</h2>
-            <p>Découvrez des restaurants d'exception séléctionnés par nos soin</p>
-            <a href="#">Explorer nos restaurants</a>
+            <div class="reservation">
+                <h3>Réservez le menu qui vous convient</h3>
+                <p>Découvrez des restaurants d'exception séléctionnés par nos soin</p>
+                <button class="btn">Explorer nos restaurants</button>
+            </div>
         </section>
         <section>
-            <div>
-                <h2>Fonctionnement</h2>
-                <ol>
-                    <li>
+            <div class="fonction">
+                <h2 class="fonction__titre">Fonctionnement</h2>
+                <div class="fonction__step">
+                    <span class="fonction__step__number">1</span>
+                    <div class="fonction__step__icone">
                         <i class="fa-mobile-alt fas" aria-hidden="true"></i>
-                        <span>Choississez un restaurant</span>
-                    </li>
-                    <li>
+                    </div>
+                    <span class="fonction__step__titre">Choississez un restaurant</span>
+                </div>
+                <div class="fonction__step">
+                    <span class="fonction__step__number">2</span>
+                    <div class="fonction__step__icone"> 
                         <i class="fa-list-ul fas" aria-hidden="true"></i>
-                        <span>Composez votre menu</span>
-                    </li>
-                    <li>
+                    </div>
+                    <span class="fonction__step__titre">Composez votre menu</span>
+                </div>
+                <div class="fonction__step">
+                    <span class="fonction__step__number">3</span>
+                    <div class="fonction__step__icone">
                         <i class="fa-store fas" aria-hidden="true"></i>
-                        <span>Dégustez au restaurant</span>
-                    </li>
-                </ol>
+                    </div>
+                    <span class="fonction__step__titre">Dégustez au restaurant</span>
+                </div>
             </div>
         </section>
         <section>
@@ -51,7 +60,7 @@
                 <div>
                     <a href="menu1.html">
                         <figure>
-                            <img src="sass/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                             <span>Nouveau</span>
                             <figcaption>
                                 <h3>La palette du goût</h3>
@@ -63,7 +72,7 @@
                     </a>
                     <a href="menu2.html">
                         <figure>
-                            <img src="sass/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                             <span>Nouveau</span>
                             <figcaption>
                                 <h3>La note enchantée</h3>
@@ -75,7 +84,7 @@
                     </a>
                     <a href="menu3.html">
                         <figure>
-                            <img src="sass/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                             <figcaption>
                                 <h3>A la francaise</h3>
                                 <p>Cité rouge</p>
@@ -86,7 +95,7 @@
                     </a>
                     <a href="menu4.html">
                         <figure>
-                            <img src="sass/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                             <figcaption>
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
@@ -101,9 +110,9 @@
     </main>
     <footer class="footer">
         <div class="footer_container">
-            <img class="footer_titre" src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+            <img class="footer_titre" src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
             <a class="footer_text" href="#"><i class="fa-utensils fas footer_icone" aria-hidden="true"></i>Proposer un restaurant</a>
-            <a class="footer_text"href="#"><i class="fa-hands-helping fas footer_icone" aria-hidden="true"></i>Devenir partenaire</a>
+            <a class="footer_text" href="#"><i class="fa-hands-helping fas footer_icone" aria-hidden="true"></i>Devenir partenaire</a>
             <a class="footer_text" href="#">Mentions légales</a>
             <a class="footer_text" href="mailto:contact@ohmyfood.fr">Contact</a>
         </div>
