--- a/menu2.html
+++ b/menu2.html
@@ -16,10 +16,10 @@
             <i class="fas fa-arrow-left logo-retour"></i>
         </a>     
         <div class="logo-haut">      
-            <img src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+            <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         </div> 
     </header>     
-    <img src="sass/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+    <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
     <main>
         <section>
             <div>
@@ -139,15 +139,15 @@
                 </div>
             </div>
             <div>
-                <button>Commander</button>
+                <button class="btn">Commander</button>
             </div>
         </section>
     </main>
     <footer class="footer">
         <div class="footer_container">
-            <img class="footer_titre" src="sass/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+            <img class="footer_titre" src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
             <a class="footer_text" href="#"><i class="fa-utensils fas footer_icone" aria-hidden="true"></i>Proposer un restaurant</a>
-            <a class="footer_text"href="#"><i class="fa-hands-helping fas footer_icone" aria-hidden="true"></i>Devenir partenaire</a>
+            <a class="footer_text" href="#"><i class="fa-hands-helping fas footer_icone" aria-hidden="true"></i>Devenir partenaire</a>
             <a class="footer_text" href="#">Mentions légales</a>
             <a class="footer_text" href="mailto:contact@ohmyfood.fr">Contact</a>
         </div>
