travail sur les pages d'accueil et de menu HTML et CSS

--- a/menu3.html
+++ b/menu3.html
@@ -19,18 +19,19 @@
             <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         </div>  
     </header>
-    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+    <img class="imageHaute"src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
     <main>
-        <section>
-            <div>
+        <section class="sectionMenu">
+            <div class="titre__restaurant">
                 <h2>A la française</h2>
                 <i class="fa-heart far"></i>
                 <i class="fa-heart fas"></i>
             </div>
             <div>
-                <div>
-                    <h3>ENTREES</h3>
-                    <div>
+                <div class="menu">
+                    <h3 class="menu__titre">ENTREES</h3>
+                    <div class="menu__ligneTitre"></div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Tartare de poulpe acidulé</h4>
                             <p>Aux zests d'orange</p>
@@ -40,7 +41,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Velouté de légumes d'antan</h4>
                             <p>Carotte, panais, topinambour</p>
@@ -50,7 +51,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Soupe à l'oignon</h4>
                             <p>Revisité</p>
@@ -61,9 +62,10 @@
                         </div>
                     </div>   
                 </div>
-                <div>
-                    <h3>PLATS</h3>
-                    <div>
+                <div class="menu">
+                    <h3 class="menu__titre">PLATS</h3>
+                    <div class="menu__ligneTitre"></div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Coquilles Saint-Jacques</h4>
                             <p>Accompagné d'une purée de panais</p>
@@ -73,7 +75,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Magret de canard</h4>
                             <p>Et parmentier de pommes de terres</p>
@@ -83,7 +85,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Pigeonneau d'Ille-et Vilaine</h4>
                             <p>Sur son lit de gnocchis aux légumes</p>
@@ -94,9 +96,10 @@
                         </div>
                     </div>      
                 </div>
-                <div>
-                    <h3>DESSERTS</h3>
-                    <div>
+                <div class="menu">
+                    <h3 class="menu__titre">DESSERTS</h3>
+                    <div class="menu__ligneTitre"></div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Pétales de viollettes glacés</h4>
                             <p>Et purée de noisettes</p>
@@ -106,7 +109,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Fondant au chocolat</h4>
                             <p>Revisité</p>
@@ -116,7 +119,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Millefeuille croustillant</h4>
                             <p>Myrtilles et pâtes d'amande</p>
