--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="restaurant">
             <div>
                 <h2>Restaurants</h2>
                 <div>
                     <a href="menu1.html">
-                        <figure>
-                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-                            <span>Nouveau</span>
+                        <figure class="restaurant__menu">
+                            <img class="restaurant__img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                            <span class="restaurant__news">Nouveau</span>
                             <figcaption>
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
@@ -71,9 +71,9 @@
                         </figure>
                     </a>
                     <a href="menu2.html">
-                        <figure>
-                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
-                            <span>Nouveau</span>
+                        <figure class="restaurant__menu">
+                            <img class="restaurant__img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                            <span class="restaurant__news">Nouveau</span>
                             <figcaption>
                                 <h3>La note enchantée</h3>
                                 <p>Charonne</p>
@@ -83,8 +83,8 @@
                         </figure>
                     </a>
                     <a href="menu3.html">
-                        <figure>
-                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                        <figure class="restaurant__menu">
+                            <img class="restaurant__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                             <figcaption>
                                 <h3>A la francaise</h3>
                                 <p>Cité rouge</p>
@@ -94,8 +94,8 @@
                         </figure>
                     </a>
                     <a href="menu4.html">
-                        <figure>
-                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                        <figure class="restaurant__menu" >
+                            <img class="restaurant__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                             <figcaption>
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
