--- a/menu1.html
+++ b/menu1.html
@@ -19,18 +19,19 @@
             <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         </div>        
     </header>
-    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+    <img class="imageHaute" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
     <main>
-        <section>
-            <div>
+        <section class="sectionMenu">
+            <div class="titre__restaurant">
                 <h2>La palette du goût</h2>
                 <i class="fa-heart far"></i>
                 <i class="fa-heart fas"></i>
             </div>
             <div>
-                <div>
+                <div class="menu">
                     <h3>ENTREES</h3>
-                    <div>
+                    <div class="menu__ligneTitre"></div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Fricassée d'escargot</h4>
                             <p>Au piment d'espelette</p>
@@ -40,7 +41,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Foie gras de canard mi-cuit</h4>
                             <p>Et ses copeaux de truffe noire</p>
@@ -50,7 +51,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Oeuf au plat</h4>
                             <p>Assaisonné à la truffe sur lit de poireaux</p>
@@ -61,9 +62,10 @@
                         </div>
                     </div>    
                 </div>
-                <div>
+                <div class="menu">
                     <h3>PLATS</h3>
-                    <div>
+                    <div class="menu__ligneTitre"></div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Filet de boeuf aux herbes</h4>
                             <p>Accompagné de sa ribambelle de légumes</p>
@@ -73,7 +75,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Parmentier de queue de boeuf</h4>
                             <p>A la truffe noire sur sa purée de panais</p>
@@ -83,7 +85,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Filet de turbot</h4>
                             <p>Aux agrumes</p>
@@ -94,9 +96,10 @@
                         </div>
                     </div>      
                 </div>
-                <div>
+                <div class="menu">
                     <h3>DESSERTS</h3>
-                    <div>
+                    <div class="menu__ligneTitre"></div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Paris-Brest</h4>
                             <p>Revisité</p>
@@ -106,7 +109,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Macaron au chocolat d'exception</h4>
                             <p>Et glace à la vanille de Madagascar</p>
@@ -116,7 +119,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Mousse au chocolat</h4>
                             <p>Au piment d'espelette et à la truffe noire</p>
