--- a/menu2.html
+++ b/menu2.html
@@ -19,18 +19,19 @@
             <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         </div> 
     </header>     
-    <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+    <img class="imageHaute" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
     <main>
-        <section>
-            <div>
+        <section class="sectionMenu">
+            <div class="titre__restaurant">
                 <h2>La note enchantée</h2>
                 <i class="fa-heart far"></i>
                 <i class="fa-heart fas"></i>
             </div>
             <div>
-                <div>
+                <div class="menu">
                     <h3>ENTREES</h3>
-                    <div>
+                    <div class="menu__ligneTitre"></div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Raviole de foie gras</h4>
                             <p>Accompagnés de leur crème à la truffe</p>
@@ -40,7 +41,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Caviar osciètre</h4>
                             <p>Sur blini à la farine de blé noir</p>
@@ -50,7 +51,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Homard et espuma</h4>
                             <p>Marinés aux zests d'orange</p>
@@ -60,7 +61,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Foie gras de canard cuit entier</h4>
                             <p>Confiture de figue et pain toasté</p>
@@ -71,9 +72,10 @@
                         </div>
                     </div>    
                 </div>
-                <div>
+                <div class="menu">
                     <h3>PLATS</h3>
-                    <div>
+                    <div class="menu__ligneTitre"></div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Noix de coquilles Saint-Jacques</h4>
                             <p>Sur lit de purée de céleri-rave</p>
@@ -83,7 +85,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Langoustine poêlée</h4>
                             <p>Purée de patate douce</p>
@@ -93,7 +95,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Mijoté de queue de boeuf</h4>
                             <p>Et riz sauvage aux zestes de citron</p>
@@ -104,9 +106,10 @@
                         </div>
                     </div>      
                 </div>
-                <div>
+                <div class="menu">
                     <h3>DESSERTS</h3>
-                    <div>
+                    <div class="menu__ligneTitre"></div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Macaron noisette et chocolat</h4>
                             <p>Glace au caramel brun et sel de Guérande</p>
@@ -116,7 +119,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Baba au rhum revesité</h4>
                             <p>Avec son coulis de citron</p>
@@ -126,7 +129,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Tarte au citron meringuée</h4>
                             <p>destructurée</p>
