--- a/menu4.html
+++ b/menu4.html
@@ -19,18 +19,19 @@
             <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         </div>  
     </header>
-    <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+    <img class="imageHaute" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
     <main>
-        <section>
-            <div>
+        <section class="sectionMenu">
+            <div class="titre__restaurant">
                 <h2>Le délice des sens</h2>
                 <i class="fa-heart far"></i>
                 <i class="fa-heart fas"></i>
             </div>
             <div>
-                <div>
-                    <h3>ENTREES</h3>
-                    <div>
+                <div class="menu">
+                    <h3 class="menu__titre">ENTREES</h3>
+                    <div class="menu__ligneTitre"></div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Tartares de thon</h4>
                             <p>Assaisonné au yuzu</p>
@@ -40,7 +41,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Bouchée de homard croustillant</h4>
                             <p>Et sa farandole de petits légumes</p>
@@ -50,7 +51,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Velouté de cèpes</h4>
                             <p>Aux truffes</p>
@@ -61,9 +62,10 @@
                         </div>
                     </div>    
                 </div>
-                <div>
-                    <h3>PLATS</h3>
-                    <div>
+                <div class="menu">
+                    <h3 class="menu__titre">PLATS</h3>
+                    <div class="menu__ligneTitre"></div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Filet de boeuf aux herbes</h4>
                             <p>Accompagné de sa ribambelle de légumes</p>
@@ -73,7 +75,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Poulet rôti aux herbes de provence</h4>
                             <p>Et ses légumes de saison</p>
@@ -83,7 +85,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Côte de boeuf angus</h4>
                             <p>Et sa purée de panais</p>
@@ -94,9 +96,10 @@
                         </div>
                     </div>      
                 </div>
-                <div>
-                    <h3>DESSERTS</h3>
-                    <div>
+                <div class="menu">
+                    <h3 class="menu__titre">DESSERTS</h3>
+                    <div class="menu__ligneTitre"></div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Farandole de desserts</h4>
                             <p>Du chef</p>
@@ -106,7 +109,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Crème brulée</h4>
                             <p>Revisitée</p>
@@ -116,7 +119,7 @@
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu__descision">
                         <div>
                             <h4>Tiramisu</h4>
                             <p>A la noisette</p>
