--- a/menu2.html
+++ b/menu2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5f1c8b453d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="public/css/style.css">
     <title>Restaurant "la note enchantée" - ohmyfood</title>
@@ -40,7 +40,7 @@
                             <p class="menu__textNormal">Accompagnés de leur crème à la truffe</p>
                         </div>
                         <div class="menu__prix"><strong>25 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                             <p class="menu__textNormal">Sur blini à la farine de blé noir</p>
                         </div>
                         <div class="menu__prix"><strong>35 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
@@ -60,7 +60,7 @@
                             <p class="menu__textNormal">Marinés aux zests d'orange</p>
                         </div>
                         <div class="menu__prix"><strong>20 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
                             <p class="menu__textNormal">Confiture de figue et pain toasté</p>
                         </div>
                         <div class="menu__prix"><strong>35 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>    
@@ -84,7 +84,7 @@
                             <p class="menu__textNormal">Sur lit de purée de céleri-rave</p>
                         </div>
                         <div class="menu__prix"><strong>40 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
@@ -94,7 +94,7 @@
                             <p class="menu__textNormal">Purée de patate douce</p>
                         </div>
                         <div class="menu__prix"><strong>35 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                             <p class="menu__textNormal">Et riz sauvage aux zestes de citron</p>
                         </div>
                         <div class="menu__prix"><strong>44 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>      
@@ -118,7 +118,7 @@
                             <p class="menu__textNormal">Glace au caramel brun et sel de Guérande</p>
                         </div>
                         <div class="menu__prix"><strong>18 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                             <p class="menu__textNormal">Avec son coulis de citron</p>
                         </div>
                         <div class="menu__prix"><strong>22 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                             <p class="menu__textNormal">destructurée</p>
                         </div>
                         <div class="menu__prix"><strong>23 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>  
