--- a/menu3.html
+++ b/menu3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5f1c8b453d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="public/css/style.css">
     <title>Restaurant "A la francaise" - ohmyfood</title>
@@ -40,7 +40,7 @@
                             <p class="menu__textNormal">Aux zests d'orange</p>
                         </div>
                         <div class="menu__prix"><strong>25 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                             <p class="menu__textNormal">Carotte, panais, topinambour</p>
                         </div>
                         <div class="menu__prix"><strong>35 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
@@ -60,7 +60,7 @@
                             <p class="menu__textNormal">Revisité</p>
                         </div>
                         <div class="menu__prix"><strong>20 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>   
@@ -74,7 +74,7 @@
                             <p class="menu__textNormal">Accompagné d'une purée de panais</p>
                         </div>
                         <div class="menu__prix"><strong>40 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                             <p class="menu__textNormal">Et parmentier de pommes de terres</p>
                         </div>
                         <div class="menu__prix"><strong>35 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
@@ -94,7 +94,7 @@
                             <p class="menu__textNormal">Sur son lit de gnocchis aux légumes</p>
                         </div>
                         <div class="menu__prix"><strong>44 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>      
@@ -108,7 +108,7 @@
                             <p class="menu__textNormal">Et purée de noisettes</p>
                         </div>
                         <div class="menu__prix"><strong>18 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                             <p class="menu__textNormal">Revisité</p>
                         </div>
                         <div class="menu__prix"><strong>22 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                             <p class="menu__textNormal">Myrtilles et pâtes d'amande</p>
                         </div>
                         <div class="menu__prix"><strong>23 €</strong></div>
-                        <div>
+                        <div class="menu__icone">
                             <i class="fa-check fas"></i>
                         </div>
                     </div>  
